Update version to 7.0.201215.1200 supporting 17763.1577

--- a/Tools/Templates/SIPolicy_Template.xml
+++ b/Tools/Templates/SIPolicy_Template.xml
@@ -19,7 +19,11 @@
     <Rule>
       <Option>Enabled:UMCI</Option>
     </Rule>
+    <Rule>
+      <Option>Enabled:Inherit Default Policy</Option>
+    </Rule>
   </Rules>
+  
   <!--EKUS-->
   <EKUs />
   <!--File Rules-->
