--- a/Tools/Templates/SIPolicy_Template.xml
+++ b/Tools/Templates/SIPolicy_Template.xml
@@ -22,105 +22,247 @@
     <Rule>
       <Option>Enabled:Inherit Default Policy</Option>
     </Rule>
+    <Rule>
+      <Option>Enabled:Update Policy No Reboot</Option>
+    </Rule>
   </Rules>
   
   <!--EKUS-->
-  <EKUs />
-  <!--File Rules-->
-  <FileRules />
+  <EKUs>
+    <EKU ID="ID_EKU_WINDOWS" Value="010A2B0601040182370A0306" />
+    <EKU ID="ID_EKU_WHQL"    Value="010A2B0601040182370A0305" />
+    <EKU ID="ID_EKU_ELAM"    Value="010A2B0601040182373D0401" />
+    <EKU ID="ID_EKU_HAL_EXT" Value="010a2b0601040182373d0501" />
+    <EKU ID="ID_EKU_RT_EXT"  Value="010a2b0601040182370a0315" />
+    <EKU ID="ID_EKU_STORE" FriendlyName="Windows Store EKU - 1.3.6.1.4.1.311.76.3.1 Windows Store" Value="010a2b0601040182374c0301" />
+    <EKU ID="ID_EKU_DCODEGEN" FriendlyName="Dynamic Code Generation EKU - 1.3.6.1.4.1.311.76.5.1" Value="010A2B0601040182374C0501" />
+    <EKU ID="ID_EKU_AM" FriendlyName="AntiMalware EKU -1.3.6.1.4.1.311.76.11.1 " Value="010a2b0601040182374c0b01" />
+  </EKUs>
+  
   <!--Signers-->
   <Signers>
-    <Signer ID="ID_SIGNER_S_1" Name="Microsoft Windows Production PCA 2011">
-      <CertRoot Type="TBS" Value="4E80BE107C860DE896384B3EFF50504DC2D76AC7151DF3102A4450637A032146" />
+    <Signer ID="ID_SIGNER_WINDOWS_PRODUCTION" Name="Microsoft Product Root 2010 Windows EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_WINDOWS" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_3" Name="Microsoft Windows Production PCA 2011">
-      <CertRoot Type="TBS" Value="4E80BE107C860DE896384B3EFF50504DC2D76AC7151DF3102A4450637A032146" />
+    <Signer ID="ID_SIGNER_ELAM_PRODUCTION" Name="Microsoft Product Root 2010 ELAM EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_ELAM" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_3F0" Name="Microsoft Windows Verification PCA">
-      <CertRoot Type="TBS" Value="265E5C02BDC19AA5394C2C3041FC2BD59774F918" />
+
+    <Signer ID="ID_SIGNER_HAL_PRODUCTION" Name="Microsoft Product Root 2010 HAL EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_HAL_EXT" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_75C" Name="Microsoft Testing PCA 2010">
-      <CertRoot Type="TBS" Value="CCEA4720A5D9D56ACFAA31C19D9D34FA4CC0771720A99DC8A2C7A4CF38A9DEE8" />
+    
+    <Signer ID="ID_SIGNER_WHQL_SHA2" Name="Microsoft Product Root 2010 WHQL EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_WHQL" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_868" Name="Microsoft Testing PCA 2010">
-      <CertRoot Type="TBS" Value="CCEA4720A5D9D56ACFAA31C19D9D34FA4CC0771720A99DC8A2C7A4CF38A9DEE8" />
+    
+    <Signer ID="ID_SIGNER_WHQL_SHA1" Name="Microsoft Product Root WHQL EKU SHA1">
+      <CertRoot Type="Wellknown" Value="05" />
+      <CertEKU ID="ID_EKU_WHQL" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_BD5" Name="Microsoft Code Signing PCA 2010">
-      <CertRoot Type="TBS" Value="121AF4B922A74247EA49DF50DE37609CC1451A1FE06B2CB7E1E079B492BD8195" />
+    
+    <Signer ID="ID_SIGNER_WHQL_MD5" Name="Microsoft Product Root WHQL EKU MD5">
+      <CertRoot Type="Wellknown" Value="04" />
+      <CertEKU ID="ID_EKU_WHQL" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_BD8" Name="Microsoft Code Signing PCA 2010">
-      <CertRoot Type="TBS" Value="121AF4B922A74247EA49DF50DE37609CC1451A1FE06B2CB7E1E079B492BD8195" />
+    
+    <Signer ID="ID_SIGNER_WINDOWS_PRODUCTION_USER" Name="Microsoft Product Root 2010 Windows EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_WINDOWS" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_C40" Name="Microsoft Code Signing PCA">
-      <CertRoot Type="TBS" Value="27543A3F7612DE2261C7228321722402F63A07DE" />
+    
+    <Signer ID="ID_SIGNER_ELAM_PRODUCTION_USER" Name="Microsoft Product Root 2010 ELAM EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_ELAM" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_120A" Name="Microsoft Code Signing PCA 2011">
-      <CertRoot Type="TBS" Value="F6F717A43AD9ABDDC8CEFDDE1C505462535E7D1307E630F9544A2D14FE8BF26E" />
+    
+    <Signer ID="ID_SIGNER_HAL_PRODUCTION_USER" Name="Microsoft Product Root 2010 HAL EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_HAL_EXT" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_120E" Name="Microsoft Code Signing PCA 2011">
-      <CertRoot Type="TBS" Value="F6F717A43AD9ABDDC8CEFDDE1C505462535E7D1307E630F9544A2D14FE8BF26E" />
+    
+    <Signer ID="ID_SIGNER_WHQL_SHA2_USER" Name="Microsoft Product Root 2010 WHQL EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_WHQL" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_1A7D" Name="Microsoft Windows Third Party Component CA 2012">
-      <CertRoot Type="TBS" Value="CEC1AFD0E310C55C1DCC601AB8E172917706AA32FB5EAF826813547FDF02DD46" />
+    
+    <Signer ID="ID_SIGNER_WHQL_SHA1_USER" Name="Microsoft Product Root WHQL EKU SHA1">
+      <CertRoot Type="Wellknown" Value="05" />
+      <CertEKU ID="ID_EKU_WHQL" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_1A80" Name="Microsoft Windows Third Party Component CA 2012">
-      <CertRoot Type="TBS" Value="CEC1AFD0E310C55C1DCC601AB8E172917706AA32FB5EAF826813547FDF02DD46" />
+    
+    <!-- Flighting related signers -->
+    <Signer ID="ID_SIGNER_WINDOWS_FLIGHT_ROOT" Name="Microsoft Flighting Root 2014 Windows EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_WINDOWS" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_1C18" Name="Microsoft Code Signing PCA">
-      <CertRoot Type="TBS" Value="27543A3F7612DE2261C7228321722402F63A07DE" />
+    
+    <Signer ID="ID_SIGNER_ELAM_FLIGHT" Name="Microsoft Flighting Root 2014 ELAM EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_ELAM" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_1C7A" Name="Microsoft Code Signing PCA">
-      <CertRoot Type="TBS" Value="5095BF071B0D9976E40AE08412F4E1D241AFB58C" />
+    
+    <Signer ID="ID_SIGNER_HAL_FLIGHT" Name="Microsoft Flighting Root 2014 HAL EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_HAL_EXT" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_2893" Name="Windows OEM Intermediate 2017 (TEST ONLY)">
-      <CertRoot Type="TBS" Value="300217091313D230385D9EB39B833B63BE0E3060EFECEC995918231E0B2D0A2A" />
+    
+    <Signer ID="ID_SIGNER_WHQL_FLIGHT_SHA2" Name="Microsoft Flighting Root 2014 WHQL EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_WHQL" />
     </Signer>
-    <Signer ID="ID_SIGNER_S_2896" Name="Windows OEM Intermediate 2017 (TEST ONLY)">
-      <CertRoot Type="TBS" Value="300217091313D230385D9EB39B833B63BE0E3060EFECEC995918231E0B2D0A2A" />
+    
+    <Signer ID="ID_SIGNER_WINDOWS_FLIGHT_ROOT_USER" Name="Microsoft Flighting Root 2014 Windows EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_WINDOWS" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_ELAM_FLIGHT_USER" Name="Microsoft Flighting Root 2014 ELAM EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_ELAM" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_HAL_FLIGHT_USER" Name="Microsoft Flighting Root 2014 HAL EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_HAL_EXT" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_WHQL_FLIGHT_SHA2_USER" Name="Microsoft Flighting Root 2014 WHQL EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_WHQL" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_WHQL_MD5_USER" Name="Microsoft Product Root WHQL EKU MD5">
+      <CertRoot Type="Wellknown" Value="04" />
+      <CertEKU ID="ID_EKU_WHQL" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_STORE" Name="Microsoft MarketPlace PCA 2011">
+      <CertRoot Type="TBS" Value="FC9EDE3DCCA09186B2D3BF9B738A2050CB1A554DA2DCADB55F3F72EE17721378" />
+      <CertEKU ID="ID_EKU_STORE" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_RT_PRODUCTION" Name="Microsoft Product Root 2010 RT EKU">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_RT_EXT" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_RT_FLIGHT" Name="Microsoft Flighting Root 2014 RT EKU">
+      <CertRoot Type="Wellknown" Value="0E" />
+      <CertEKU ID="ID_EKU_RT_EXT" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_RT_STANDARD" Name="Microsoft Standard Root 2001 RT EUK">
+      <CertRoot Type="Wellknown" Value="07" />
+      <CertEKU ID="ID_EKU_RT_EXT" />
+    </Signer>
+  
+    <Signer ID="ID_SIGNER_TEST2010" Name="MincryptKnownRootMicrosoftTestRoot2010">
+      <CertRoot Type="Wellknown" Value="0A" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_TEST2010_USER" Name="MincryptKnownRootMicrosoftTestRoot2010">
+      <CertRoot Type="Wellknown" Value="0A" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_DRM" Name="MincryptKnownRootMicrosoftDMDRoot2005">
+      <CertRoot Type="Wellknown" Value="0C" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_DCODEGEN" Name="MincryptKnownRootMicrosoftProductRoot2010">
+      <CertRoot Type="Wellknown" Value="06" />
+      <CertEKU ID="ID_EKU_DCODEGEN" />
+    </Signer>
+    
+    <Signer ID="ID_SIGNER_AM" Name="MincryptKnownRootMicrosoftStandardRoot2011">
+      <CertRoot Type="Wellknown" Value="07" />
+      <CertEKU ID="ID_EKU_AM" />
     </Signer>
   </Signers>
-  <!--Driver Signing Scenarios-->
+  
   <SigningScenarios>
-    <SigningScenario Value="131" ID="ID_SIGNINGSCENARIO_DRIVERS_1" FriendlyName="Auto generated policy on 09-03-2018">
+    <!--Kernel Mode Signing Scenario-->
+    <SigningScenario Value="131" ID="ID_SIGNINGSCENARIO_KMCI" FriendlyName="Kernel Mode Signing Scenario">
       <ProductSigners>
         <AllowedSigners>
-          <AllowedSigner SignerId="ID_SIGNER_S_3" />
-          <AllowedSigner SignerId="ID_SIGNER_S_868" />
-          <AllowedSigner SignerId="ID_SIGNER_S_BD5" />
-          <AllowedSigner SignerId="ID_SIGNER_S_120A" />
-          <AllowedSigner SignerId="ID_SIGNER_S_1A7D" />
-          <AllowedSigner SignerId="ID_SIGNER_S_1C18" />
-          <AllowedSigner SignerId="ID_SIGNER_S_2893" />
+          <AllowedSigner SignerId="ID_SIGNER_WINDOWS_PRODUCTION" />
+          <AllowedSigner SignerId="ID_SIGNER_ELAM_PRODUCTION" />
+          <AllowedSigner SignerId="ID_SIGNER_HAL_PRODUCTION" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_SHA2" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_SHA1" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_MD5" />
+          <AllowedSigner SignerId="ID_SIGNER_WINDOWS_FLIGHT_ROOT" />
+          <AllowedSigner SignerId="ID_SIGNER_ELAM_FLIGHT" />
+          <AllowedSigner SignerId="ID_SIGNER_HAL_FLIGHT" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_FLIGHT_SHA2" />
+          <!-- Test signer is trusted by ConfigCI, however, it will not be trusted by CI unless testsigning BCD is set -->
+          <AllowedSigner SignerId="ID_SIGNER_TEST2010" />
         </AllowedSigners>
       </ProductSigners>
     </SigningScenario>
-    <SigningScenario Value="12" ID="ID_SIGNINGSCENARIO_WINDOWS" FriendlyName="Auto generated policy on 09-03-2018">
+    
+    <!--User Mode Signing Scenario-->
+    <SigningScenario Value="12" ID="ID_SIGNINGSCENARIO_UMCI" FriendlyName="User Mode Signing Scenario">
       <ProductSigners>
         <AllowedSigners>
-          <AllowedSigner SignerId="ID_SIGNER_S_1" />
-          <AllowedSigner SignerId="ID_SIGNER_S_3F0" />
-          <AllowedSigner SignerId="ID_SIGNER_S_75C" />
-          <AllowedSigner SignerId="ID_SIGNER_S_BD8" />
-          <AllowedSigner SignerId="ID_SIGNER_S_C40" />
-          <AllowedSigner SignerId="ID_SIGNER_S_120E" />
-          <AllowedSigner SignerId="ID_SIGNER_S_1A80" />
-          <AllowedSigner SignerId="ID_SIGNER_S_1C7A" />
-          <AllowedSigner SignerId="ID_SIGNER_S_2896" />
+          <AllowedSigner SignerId="ID_SIGNER_WINDOWS_PRODUCTION_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_ELAM_PRODUCTION_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_HAL_PRODUCTION_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_SHA2_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_SHA1_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_MD5_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_WINDOWS_FLIGHT_ROOT_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_ELAM_FLIGHT_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_HAL_FLIGHT_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_WHQL_FLIGHT_SHA2_USER" />
+          <AllowedSigner SignerId="ID_SIGNER_STORE" />
+          <AllowedSigner SignerId="ID_SIGNER_RT_PRODUCTION" />
+          <AllowedSigner SignerId="ID_SIGNER_DRM" />
+          <AllowedSigner SignerId="ID_SIGNER_DCODEGEN" />
+          <AllowedSigner SignerId="ID_SIGNER_AM" />
+          <AllowedSigner SignerId="ID_SIGNER_RT_FLIGHT" />
+          <AllowedSigner SignerId="ID_SIGNER_RT_STANDARD" />
+          <!-- Test signer is trusted by ConfigCI, however, it will not be trusted by CI unless testsigning BCD is set -->
+          <AllowedSigner SignerId="ID_SIGNER_TEST2010_USER" />
         </AllowedSigners>
       </ProductSigners>
     </SigningScenario>
   </SigningScenarios>
-  <UpdatePolicySigners />
+  <UpdatePolicySigners>
+  </UpdatePolicySigners>
+  <!-- 
+
+    CiSigners are signers that ConfigCI asks CI to trust for all builds, include 
+    retail builds.
+    
+    Normally CiSigners is empty or only includes production signers. For enterprise
+    ConfigCI policy, you may need to include enterprise signers. Just make sure it
+    is understood that CiSigners will be trusted by CI for all builds.
+
+-->
   <CiSigners>
-    <CiSigner SignerId="ID_SIGNER_S_1" />
-    <CiSigner SignerId="ID_SIGNER_S_3F0" />
-    <CiSigner SignerId="ID_SIGNER_S_75C" />
-    <CiSigner SignerId="ID_SIGNER_S_BD8" />
-    <CiSigner SignerId="ID_SIGNER_S_C40" />
-    <CiSigner SignerId="ID_SIGNER_S_120E" />
-    <CiSigner SignerId="ID_SIGNER_S_1A80" />
-    <CiSigner SignerId="ID_SIGNER_S_1C7A" />
-    <CiSigner SignerId="ID_SIGNER_S_2896" />
+    <!--
+      Currently Centennial Apps are launched as Win32 Apps and signed by store certificate.
+      We need to allow enterprise signing scenario to trust store certificate.
+    -->
+    <CiSigner SignerId="ID_SIGNER_STORE" />
   </CiSigners>
+
   <HvciOptions>0</HvciOptions>
+  <Settings>
+    <Setting Provider="PolicyInfo" Key="Information" ValueName="Name">
+      <Value>
+        <String>DefaultWindowsEnforced</String>
+      </Value>
+    </Setting>
+    <Setting Provider="PolicyInfo" Key="Information" ValueName="Id">
+      <Value>
+        <String>031017</String>
+      </Value>
+    </Setting>
+  </Settings>
 </SiPolicy>
